--- a/_layouts/fanlink_list.html
+++ b/_layouts/fanlink_list.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="mx-auto col-lg-12 website text-center h5">
-        <a href="https://dimatis.yizack.com" target="_blank" title="Website">dimatis.yizack.com</a>
+        <a href="https://bayzamusic.com" target="_blank" title="Website">bayzamusic.com</a>
       </div>
     </div>
     <script src="/js/jquery-3.4.1.min.js"></script>
