--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -187,8 +187,8 @@
             </li>
           </ul>
         </div>
-        <div class="mx-auto col-lg-12 text-center h5">
-          <a class="website {% if page.dark == true %} text-dark{% endif %}" href="https://bayzamusic.com/fanlinks" title="fanlinks">bayzamusic.com/fanlinks</a>
+        <div class="mx-auto col-lg-12 text-center h5 website {% if page.dark == true %} text-dark{% endif %}">
+          <a href="https://bayzamusic.com/fanlinks" title="fanlinks">bayzamusic.com/fanlinks</a>
         </div>
       </div>
     </div>
