--- a/_layouts/fanlink_list.html
+++ b/_layouts/fanlink_list.html
@@ -79,8 +79,8 @@
           </ul>
         </div>
       </div>
-      <div class="mx-auto col-lg-12 text-center h5">
-        <a class="website {% if page.dark == true %} text-dark{% endif %}" href="https://bayzamusic.com" target="_blank" title="Website">bayzamusic.com</a>
+      <div class="mx-auto col-lg-12 text-center h5 website {% if page.dark == true %} text-dark{% endif %}">
+        <a href="https://bayzamusic.com" target="_blank" title="Website">bayzamusic.com</a>
       </div>
     </div>
     <script src="/js/jquery-3.4.1.min.js"></script>
