--- a/css/links.css
+++ b/css/links.css
@@ -25,7 +25,11 @@ html {
   background-color: #292929!important;
 }
 
-.text-dark{
+.text-dark {
+  color: #292929!important;
+}
+
+.text-dark a {
   color: #292929!important;
 }
 
@@ -48,7 +52,7 @@ html {
   color: #fff;
 }
 
-.website {
+.website a {
   color: #fff;
 }
 
