--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -157,11 +157,11 @@
                 <div class="col-6 pr-5 py-4 text-center my-auto">
                   <span class="btn btn-outline-light">Buy</span>
                 </div>
-              </a>{% endif %}
+              </a>{% endif %}{% if page.download %}
               <!-- free download -->
               <div class="col-lg-12 mt-3">
                 <a href="{{ page.download }}" type="button" class="btn btn-primary btn-lg btn-block text-white rounded-0" target="_blank" title="Free Download on Toneden">Free Download</a>
-              </div>
+              </div>{% endif %}
             </div>
           </div>
         </div>
