--- a/css/style.css
+++ b/css/style.css
@@ -970,7 +970,7 @@
 					padding-left: 0;
 				}
 
-					#header nav > ul > li a {
+					#header nav > ul > li a	 {
 						-moz-transition: color 0.2s ease-in-out;
 						-webkit-transition: color 0.2s ease-in-out;
 						-o-transition: color 0.2s ease-in-out;
@@ -983,6 +983,10 @@
 
 						#header nav > ul > li a:hover {
 							color: #629DD1;
+						}
+
+						#header nav > ul > li a.active {
+							color: rgb(255, 255, 255);
 						}
 
 					#header nav > ul > li:first-child {
