--- a/css/style.css
+++ b/css/style.css
@@ -976,7 +976,7 @@
 						-o-transition: color 0.2s ease-in-out;
 						-ms-transition: color 0.2s ease-in-out;
 						transition: color 0.2s ease-in-out;
-						color: #b8b8b8;
+						color: #7b7b7b;
 						display: inline-block;
 						text-decoration: none;
 					}
