--- a/css/bayza.css
+++ b/css/bayza.css
@@ -38,7 +38,7 @@ h1 {
     border-color: #282828;
 }
 
-.btn-outline-soundcloud{
+.btn-outline-soundcloud, .btn-outline-spotify, .btn-outline-youtube {
     color: #282828;
     border-color: #b8b8b8;
 }
@@ -49,8 +49,20 @@ h1 {
     background-color: #ff7700;
 }
 
+.btn-outline-spotify:hover{
+    color: #282828;
+    border-color: #b8b8b8;
+    background-color: #1db954;
+}
+
+.btn-outline-youtube:hover{
+    color: #282828;
+    border-color: #b8b8b8;
+    background-color: #ff0000;
+}
+
 .text-secondary {
-    color: #b8b8b8;
+    color: #b8b8b8!important;
 }
 
 .bg-darkest {
@@ -83,11 +95,11 @@ h1 {
     color: #b8b8b8;
 }
 
-#button1 {
+#button1, #button2, #button3 {
     cursor: pointer;
 }
 
-#soundcloud_tracks{
+#soundcloud_tracks, #spotify_tracks, #youtube_videos {
     display: none;
 }
 
@@ -96,7 +108,7 @@ iframe {
     overflow:hidden;
 }
 
-section p {
+p {
     font-size: 1.3em;
 }
 
@@ -104,7 +116,7 @@ ul.alt li {
     border-bottom: solid 1px rgba(144, 144, 144, 0.25);
     padding: 0.5em 0;
 }
-
+    
 footer li a {
     color: #b8b8b8;
 }
