--- a/css/bayza.css
+++ b/css/bayza.css
@@ -4,7 +4,7 @@
 
 .nav-item{
     padding-right: 2rem;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .icon-bayza {
@@ -112,6 +112,15 @@ p {
     font-size: 1.3em;
 }
 
+small{
+    font-family: "Roboto", Helvetica, sans-serif;
+    font-size: .65em;
+}
+
+h5 {
+    font-size: 1.4em;
+}
+
 ul.alt li {
     border-bottom: solid 1px rgba(144, 144, 144, 0.25);
     padding: 0.5em 0;
@@ -189,4 +198,8 @@ footer .instagram a:hover {
 .page-footer a {
     margin: 0 10px;
     font-size: 18px;
+}
+
+.item a{
+    color: #fff
 }
