--- a/css/bayza.css
+++ b/css/bayza.css
@@ -203,3 +203,16 @@ footer .instagram a:hover {
 .item a{
     color: #fff
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 35.25%; /* 16:9 */
+    height: 0;
+}
+.video-container iframe {
+    position: absolute;
+    top: 0%;
+    left: 18%;
+    width: 63%;
+    height: 100%;
+}
