--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -28,9 +28,9 @@
     <!-- Recursos -->
     <link rel="icon" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" href="/images/logomt.jpg"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/fontello-embedded.css">
-    <link rel="stylesheet" href="css/bayza.css"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/fontello-embedded.css">
+    <link rel="stylesheet" href="/css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <link rel="canonical" href="https://bayzamusic.com/"/>
 
