--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -5,23 +5,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="Bayza, releases, bounce, music, EDM, dance, deep house, oriental, 2020" />
-    <meta name="description" content="2020 releases."/>
+    <meta name="keywords" content="Bayza, releases, bounce, music, EDM, dance, deep house, oriental" />
+    <meta name="description" content="All releases."/>
     
     <!-- Protocolo Open Graph -->
-    <meta property="og:secure_url" content="http://bayzamusic.com/releases/2020"/>
+    <meta property="og:secure_url" content="http://bayzamusic.com/releases"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bayza 2020 Releases"/>
+    <meta property="og:title" content="Bayza Music Releases"/>
     <meta property="og:site_name" content="Bayza"/>
     <meta property="og:image" content="http://bayzamusic.com/images/logomt.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
-    <meta property="og:description" content="2020 releases"/>
+    <meta property="og:description" content="All releases"/>
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="https://bayzamusic.com/images/logomt.jpg"/>
-    <meta name="twitter:title" content="Bayza 2020 Releases">
-    <meta name="twitter:description" content="2020 releases">
+    <meta name="twitter:title" content="Bayza Music Releases">
+    <meta name="twitter:description" content="All releases">
     <meta name="twitter:site" content="@bayzamusic"/>
     
     <!-- Recursos -->
@@ -31,49 +31,38 @@
     <link rel="stylesheet" href="/css/fontello-embedded.css">
     <link rel="stylesheet" href="/css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/releases/2020"/>
+    <link rel="canonical" href="https://bayzamusic.com/releases"/>
   </head>
 
   </body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1">
-      <a class="navbar-brand" href="/"><i class="icon-bayza"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/releases">Releases</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#music">Music</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#contact">Contact</a>
-        </li>        
-        </ul>
-      </div>  
-    </nav>
+    {% include navbar.html %}
     <section id="releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-3 text-uppercase text-white">Releases</h3>
-        <h4 class="font-weight-light">2020</h4>
+        <h4 class="font-weight-light">by year</h4>
         <div class="row my-4">
           <div class="col-12 col-lg-4">
             <div class="item">
               <div class="cover">
-                <a href="/releases/2020/serenity">
-                  <img src="https://bayzamusic.com/images/releases/2020/serenity.jpg" alt="Bayza - Serenity" width="300" height="300">
+                <a href="/releases/2020">
+                  <img src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
                 </a>
-                <a href="/releases/2020/serenity">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Serenity</p></small></h5>
-                  <small><p class="mb-4">Bayza & Dimatis</p></small> 
+                <a href="/releases/2020">
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2020</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small> 
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/2019">
+                  <img src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
+                </a>
+                <a href="/releases/2019">
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2019</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small> 
                 </a>
               </div>
             </div>
