--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -1,3 +1,12 @@
+ 
+{%- assign data = site.data.releases | where: 'release', page.release -%}
+{%- assign release = data[0] -%}
+{%- if release.cover -%}
+  {%- assign cover = release.cover -%}
+{%- else -%}
+  {%- assign cover = release.release -%}
+{%- endif -%}
+{%- assign sorted = site.data.releases | sort: 'date' | reverse -%}
 <html lang="en">
   <head>
     <title>Music</title>
@@ -5,95 +14,50 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="Bayza, releases, bounce, music, EDM, dance, deep house, oriental" />
-    <meta name="description" content="All releases."/>
-    
+    <meta name="keywords" content="{{ release.artists }}, {{ release.title }}, {{ release.genre }}, {{ release.year }}, electronic, EDM, music" />
+    <meta name="description" content="{{ release.artists }} - {{ release.title }}."/>
+
     <!-- Protocolo Open Graph -->
-    <meta property="og:secure_url" content="http://bayzamusic.com/releases"/>
+    <meta property="og:secure_url" content="http://bayzamusic.com/releases/{{ release.year }}/{{ release.release }}"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bayza Music Releases"/>
+    <meta property="og:title" content="{{ release.artists }} - {{ release.title }}"/>
     <meta property="og:site_name" content="Bayza"/>
     <meta property="og:image" content="http://bayzamusic.com/images/logomt.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
-    <meta property="og:description" content="All releases"/>
-    
+    <meta property="og:description" content="{{ release.description }}"/>
+
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="https://bayzamusic.com/images/logomt.jpg"/>
-    <meta name="twitter:title" content="Bayza Music Releases">
-    <meta name="twitter:description" content="All releases">
+    <meta name="twitter:title" content="{{ release.artists }} - {{ release.title }}">
+    <meta name="twitter:description" content="{{ release.description }}">
     <meta name="twitter:site" content="@bayzamusic"/>
-    
+
     <!-- Recursos -->
     <link rel="icon" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" href="/images/logomt.jpg"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/fontello-embedded.css">
-    <link rel="stylesheet" href="css/bayza.css"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/fontello-embedded.css">
+    <link rel="stylesheet" href="/css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/releases"/>
+    <link rel="canonical" href="https://bayzamusic.com/releases/{{ release.year }}/{{ release.release }}"/>
   </head>
 
   </body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1">
-      <a class="navbar-brand" href="/"><i class="icon-bayza"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/releases">Releases</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#music">Music</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#contact">Contact</a>
-        </li>        
-        </ul>
-      </div>  
-    </nav>
+  {% include navbar.html %}
     <section id="releases" class="bg-darkest">
-      <div class="container text-secondary text-center py-5">
-        <h3 class="mt-3 text-uppercase text-white">Releases</h3>
-        <h4 class="font-weight-light">by year</h4>
-        <div class="row my-4">
-          <div class="col-12 col-lg-4">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2020">
-                  <img src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
-                </a>
-                <a href="/releases/2020">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2020</p></small></h5>
-                  <small><p class="mb-4">Bayza</p></small> 
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-lg-4">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2019">
-                  <img src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
-                </a>
-                <a href="/releases/2019">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2019</p></small></h5>
-                  <small><p class="mb-4">Bayza</p></small> 
-                </a>
-              </div>
-            </div>
+        <div class="container text-secondary text-center py-3 px-0">
+          <h3 class="mt-3 text-uppercase text-white">{{ release.title }}</h3>
+          <h4 class="font-weight-light mb-0">{{ release.artists }}</h4>
+          <div id="reproductor" class="mr-5 ml-5">
+          	<div class="text-center py-3">
+            	<div class="video-container">
+            	  <iframe width="600" height="338" src="{{ release.video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            	</div>
+          	</div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
     <footer id="contact" class="page-footer bg-dark text-white text-left font-weight-light">
       <div class="container py-5">
         <div class="row">
@@ -153,8 +117,8 @@
           </div>
         </div>
       </div>
-    </footer>
-    <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
+		</footer>
+		<script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/jquery.min.js"></script>
