--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -6,23 +6,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="Bayza, releases, bounce, music, EDM, dance, deep house, oriental, 2020" />
+    <meta name="keywords" content="Bayza, releases, bounce, music, EDM, dance, deep house, oriental, {{ page.year }}" />
     <meta name="description" content="{{ page.year }} releases."/>
     
     <!-- Protocolo Open Graph -->
-    <meta property="og:secure_url" content="http://bayzamusic.com/releases/2020"/>
+    <meta property="og:secure_url" content="http://bayzamusic.com/releases/{{ page.year }}"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bayza 2020 Releases"/>
+    <meta property="og:title" content="Bayza {{ page.year }} Releases"/>
     <meta property="og:site_name" content="Bayza"/>
     <meta property="og:image" content="http://bayzamusic.com/images/logomt.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
-    <meta property="og:description" content="2020 releases"/>
+    <meta property="og:description" content="{{ page.year }} releases"/>
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="https://bayzamusic.com/images/logomt.jpg"/>
-    <meta name="twitter:title" content="Bayza 2020 Releases">
-    <meta name="twitter:description" content="2020 releases">
+    <meta name="twitter:title" content="Bayza {{ page.year }} Releases">
+    <meta name="twitter:description" content="{{ page.year }} releases">
     <meta name="twitter:site" content="@bayzamusic"/>
     
     <!-- Recursos -->
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="/css/fontello-embedded.css">
     <link rel="stylesheet" href="/css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/releases/2020"/>
+    <link rel="canonical" href="https://bayzamusic.com/releases/{{ page.year }}"/>
   </head>
 
   </body>
@@ -40,7 +40,7 @@
     <section id="releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-3 text-uppercase text-white">Releases</h3>
-        <h4 class="font-weight-light">2020</h4>
+        <h4 class="font-weight-light">{{ page.year }}</h4>
         <div class="row my-4">{% for item in sorted %}
           <div class="col-12 col-lg-4">
             <div class="item">
