--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -52,7 +52,7 @@
           <div id="reproductor" class="mr-5 ml-5">
           	<div class="text-center py-3">
             	<div class="video-container">
-            	  <iframe width="600" height="338" src="{{ release.video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            	  <iframe width="600" height="338" src="https://www.youtube.com/embed/{{ release.video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             	</div>
           	</div>
           </div>
