--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -45,7 +45,7 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2020">
-                  <img src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
+                  <img src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2020" width="300" height="300">
                 </a>
                 <a href="/releases/2020">
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">2020</p></small></h5>
@@ -70,71 +70,7 @@
         </div>
       </div>
     </section>
-    <footer id="contact" class="page-footer bg-dark text-white text-left font-weight-light">
-      <div class="container py-5">
-        <div class="row">
-          <div class="col-md-3 ">
-            <h4>Stream Music</h4>
-            <ul class="alt">
-              <li><a target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX">Spotify</a></li>
-              <li><a target="_blank" href="https://soundcloud.com/bayza">SoundCloud</a></li>
-              <li><a target="_blank" href="https://youtube.com/bayza">Youtube</a></li>
-              <li><a target="_blank" href="https://geo.itunes.apple.com/us/artist/bayza/882647839?mt=1&amp;app=music">Apple Music</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h4>Buy Music</h4>
-            <ul class="alt">
-              <li>
-                <a target="_blank" href="https://geo.itunes.apple.com/us/artist/bayza/882647839?app=itunes">iTunes</a>
-              </li>
-              <li>
-                <a target="_blank" href="https://bayza.bandcamp.com/">Bandcamp</a>
-              </li>
-              <li>
-                <a target="_blank" href="https://play.google.com/store/music/artist/Bayza?id=A267m6ooa7buyxpugsy6w7dopnu">Google Play Music</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-6">
-            <h4>Contact</h4>
-            <ul class="icons mb-0">
-              <li class="spotify">
-                <a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank"><i class="icon fab fa-spotify" aria-hidden="true"></i></a>
-              </li>
-              <li class="soundcloud">
-                <a href="https://soundcloud.com/bayza" target="_blank"><i class="icon fab fa-soundcloud" aria-hidden="true"></i></a>
-              </li>
-              <li class="youtube">
-                <a href="https://youtube.com/bayza" target="_blank"><i class="icon fab fa-youtube" aria-hidden="true"></i></a>
-              </li>
-              <li class="twitter">
-                <a href="https://twitter.com/bayzamusic" target="_blank"><i class="icon fab fa-twitter" aria-hidden="true"></i></a>
-              </li>
-              <li class="facebook">
-                <a href="https://facebook.com/bayzamusic" target="_blank"><i class="icon fab fa-facebook" aria-hidden="true"></i></a>
-              </li>
-              <li class="instagram">
-                <a href="https://instagram.com/bayzamusic" target="_blank"><i class="icon fab fa-instagram" aria-hidden="true"></i></a>
-              </li>
-            </ul>
-            <ul class="contact">
-              <li>
-                <span class="ml-2">Email: </span><a class="mx-0" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-12 text-center mt-2 text-small">
-            <p>© Bayza. All rights reserved.</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
-    <script src="https://apis.google.com/js/platform.js"></script>
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
+{% include footer.html %}
+{% include scripts.html %}
   </body>
 </html>
