--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -6,23 +6,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="Bayza, releases, bounce, music, EDM, dance, deep house, oriental, {{ page.year }}" />
-    <meta name="description" content="{{ page.year }} releases."/>
+    <meta name="keywords" content="Bayza, {{ page.year }}, bounce, music, EDM, dance, deep house, oriental, {{ page.type }}" />
+    <meta name="description" content="{{ page.year }} {{ page.type }}."/>
     
     <!-- Protocolo Open Graph -->
-    <meta property="og:secure_url" content="http://bayzamusic.com/releases/{{ page.year }}"/>
+    <meta property="og:secure_url" content="http://bayzamusic.com/releases/{{ page.year }}{{ page.link }}"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bayza {{ page.year }} Releases"/>
+    <meta property="og:title" content="Bayza {{ page.year }} {{ page.type }}"/>
     <meta property="og:site_name" content="Bayza"/>
     <meta property="og:image" content="http://bayzamusic.com/images/logomt.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
-    <meta property="og:description" content="{{ page.year }} releases"/>
+    <meta property="og:description" content="{{ page.year }} {{ page.type }}"/>
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="https://bayzamusic.com/images/logomt.jpg"/>
-    <meta name="twitter:title" content="Bayza {{ page.year }} Releases">
-    <meta name="twitter:description" content="{{ page.year }} releases">
+    <meta name="twitter:title" content="Bayza {{ page.year }} {{ page.type }}">
+    <meta name="twitter:description" content="{{ page.year }} {{ page.type }}">
     <meta name="twitter:site" content="@bayzamusic"/>
     
     <!-- Recursos -->
@@ -32,14 +32,14 @@
     <link rel="stylesheet" href="/css/fontello-embedded.css">
     <link rel="stylesheet" href="/css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/releases/{{ page.year }}"/>
+    <link rel="canonical" href="https://bayzamusic.com/releases/{{ page.year }}{{ page.link }}"/>
   </head>
 
   </body>
   {% include navbar.html %}
     <section id="releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5">
-        <h3 class="mt-3 text-uppercase text-white">Releases</h3>
+        <h3 class="mt-3 text-uppercase text-white">{{ page.type }}</h3>
         <h4 class="font-weight-light">{{ page.year }}</h4>
         <div class="row my-4">{% for item in sorted %}
           <div class="col-12 col-lg-4">
