--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -38,7 +38,7 @@
     {% include navbar.html %}
     <section id="releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5">
-        <h3 class="mt-3 text-uppercase text-white">Releases</h3>
+        <h3 class="mt-3 text-uppercase text-white">Official Releases</h3>
         <h4 class="font-weight-light">by year</h4>
         <div class="row my-4">
           <div class="col-12 col-lg-4">
@@ -48,7 +48,7 @@
                   <img src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2020" width="300" height="300">
                 </a>
                 <a href="/releases/2020">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2020</p></small></h5>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2020 Releases</p></small></h5>
                   <small><p class="mb-4">Bayza</p></small> 
                 </a>
               </div>
@@ -61,7 +61,7 @@
                   <img src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
                 </a>
                 <a href="/releases/2019">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2019</p></small></h5>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2019 Releases</p></small></h5>
                   <small><p class="mb-4">Bayza</p></small> 
                 </a>
               </div>
@@ -70,6 +70,24 @@
         </div>
       </div>
     </section>
+    <section id="releases" class="bg-dark">
+      <div class="container text-secondary text-center py-5">
+        <h3 class="mt-3 text-uppercase text-white">Bootlegs</h3>
+        <h4 class="font-weight-light">*Special</h4>
+        <div class="row my-4">
+          <div class="col-12 col-lg-4">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/2020-bootlegs">
+                  <img src="https://bayzamusic.com/images/2020bootlegsbayzacom.jpg" alt="Bayza 2020 Bootlegs" width="300" height="300">
+                </a>
+                <a href="/releases/2020-bootlegs">
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2020 Bootlegs/Remixes</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small> 
+                </a>
+              </div>
+            </div>
+          </div>
 {% include footer.html %}
 {% include scripts.html %}
   </body>
