--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -88,6 +88,8 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
 {% include footer.html %}
 {% include scripts.html %}
   </body>
