--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -70,7 +70,7 @@
         </div>
       </div>
     </section>
-    <section id="releases" class="bg-dark">
+    <section id="releases" class="bg-darkest-est">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-3 text-uppercase text-white">Bootlegs</h3>
         <h4 class="font-weight-light">*Special</h4>
