--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -45,7 +45,7 @@
 
   </body>
   {% include navbar.html %}
-    <section id="releases" class="bg-darkest">
+    <section id="releases" class="bg-darkest-est">
         <div class="container text-secondary text-center py-3 px-0">
           <h3 class="mt-3 text-uppercase text-white">{{ release.title }}</h3>
           <h4 class="font-weight-light mb-0">{{ release.artists }}</h4>
