--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -56,7 +56,7 @@
             "@type" : "MusicGroup",
             "name" : "Bayza",
             "url" : "https://bayzamusic.com",
-            "image" : "http://bayzamusic.com/images/logomt.jpg"
+            "image" : "http://bayzamusic.com/images/logomt.jpg",
             "description": "Bayza is a Panamanian musician and producer."
             "sameAs" : [ 
               "https://youtube.com/c/bayza",
