--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -57,7 +57,7 @@
             "name" : "Bayza",
             "url" : "https://bayzamusic.com",
             "image" : "http://bayzamusic.com/images/logomt.jpg",
-            "description": "Bayza is a Panamanian musician and producer."
+            "description": "Bayza is a Panamanian musician and producer.",
             "sameAs" : [ 
               "https://youtube.com/c/bayza",
               "https://soundcloud.com/bayza",
