--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -50,7 +50,7 @@
             "url" : "https://bayzamusic.com",
             "logo" : "http://bayzamusic.com/images/logomt.jpg",
             "image" : "http://bayzamusic.com/images/ahmed_bannerweb.jpg",
-            "description": "Dimatis is a Panamanian musician and producer."
+            "description": "Bayza is a Panamanian musician and producer."
           },
           {
             "@type" : "MusicGroup",
