--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -88,6 +88,19 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-lg-4">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/2019-bootlegs">
+                  <img src="https://bayzamusic.com/images/2019bootlegsbayzacom.jpg" alt="Bayza 2019 Bootlegs" width="300" height="300">
+                </a>
+                <a href="/releases/2019-bootlegs">
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2019 Bootlegs/Remixes</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small> 
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 {% include footer.html %}
