--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -22,13 +22,13 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ release.artists }} - {{ release.title }}"/>
     <meta property="og:site_name" content="Bayza"/>
-    <meta property="og:image" content="http://bayzamusic.com/images/{{ release.year }}/{{ release.cover }}.jpg"/>
+    <meta property="og:image" content="http://bayzamusic.com/images/releases/{{ release.year }}/{{ release.cover }}.jpg"/>
     <meta property="og:image:alt" content="{{ release.title }} cover image"/>
     <meta property="og:description" content="{{ release.description }}"/>
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:image" content="https://bayzamusic.com/images/{{ release.year }}/{{ release.cover }}.jpg"/>
+    <meta name="twitter:image" content="https://bayzamusic.com/images/releases/{{ release.year }}/{{ release.cover }}.jpg"/>
     <meta name="twitter:title" content="{{ release.artists }} - {{ release.title }}">
     <meta name="twitter:description" content="{{ release.description }}">
     <meta name="twitter:site" content="@bayzamusic"/>
