--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,3 +1,4 @@
+{%- assign sorted = site.data.releases | sort: 'date' | reverse -%}
 <html lang="en">
   <head>
     <title>Bayza</title>
@@ -116,10 +117,32 @@
       </div>
     </section>
 
+    <section id="latest releases" class="bg-darkest">
+      <div class="container text-secondary text-center py-5">
+        <h3 class="mt-3 text-uppercase text-white">Latest Releases</h3>
+        <div class="row my-4">{% for item in sorted %}
+          <div class="col-12 col-lg-4">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
+                  <img src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}" width="300" height="300">
+                </a>
+                <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
+                  <small><p class="mb-4">{{ item.artists }}</p></small> 
+                </a>
+              </div>
+            </div>
+          </div>{% if forloop.index0 == 5 %}{% break %}{% endif %}{% endfor %}
+        </div>  
+        <a class="btn btn-outline-releases px-4 py-1" href="/releases">See all</a>
+      </div>
+    </section>
+
     <section id="music" class="bg-dark text-secondary text-center py-5">
       <div class="container">
         <h3 class="mt-3 text-uppercase text-white">Music</h3>
-        <h4 class="font-weight-light">Follow me to listen to my latest tracks</h4>
+        <h4 class="font-weight-light">Follow my music</h4>
         <div class="row text-white">
           <div class="col-lg-4">
             <div class="m-3 bg-darkest rounded-lg py-3">
