--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -92,7 +92,7 @@
                   <img src="https://bayzamusic.com/images/2019-bootlegsbayzacom.jpg" alt="Bayza 2019 Bootlegs" width="300" height="300">
                 </a>
                 <a href="/releases/2019-bootlegs">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2019 Bootlegs/Remixes</p></small></h5>
+                  <h5 class="mb-0"><small><p class="mt-2">2019 Bootlegs/Remixes</p></small></h5>
                 </a>
               </div>
             </div>
