--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -48,7 +48,7 @@
                   <img src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2020" width="300" height="300">
                 </a>
                 <a href="/releases/2020">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2020 Releases</p></small></h5>
+                  <h5 class="mb-0"><small><p class="mt-2">2020 Releases</p></small></h5>
                 </a>
               </div>
             </div>
@@ -60,7 +60,7 @@
                   <img src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
                 </a>
                 <a href="/releases/2019">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2019 Releases</p></small></h5>
+                  <h5 class="mb-0"><small><p class="mt-2">2019 Releases</p></small></h5>
                 </a>
               </div>
             </div>
@@ -80,7 +80,7 @@
                   <img src="https://bayzamusic.com/images/2020-bootlegsbayzacom.jpg" alt="Bayza 2020 Bootlegs" width="300" height="300">
                 </a>
                 <a href="/releases/2020-bootlegs">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2020 Bootlegs/Remixes</p></small></h5>
+                  <h5 class="mb-0"><small><p class="mt-2">2020 Bootlegs/Remixes</p></small></h5>
                 </a>
               </div>
             </div>
