--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
           <ul class="alt">
             <li><a target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX">Spotify</a></li>
             <li><a target="_blank" href="https://soundcloud.com/bayza">SoundCloud</a></li>
-            <li><a target="_blank" href="https://youtube.com/bayza">Youtube</a></li>
+            <li><a target="_blank" href="https://youtube.com/bayza">YouTube</a></li>
             <li><a target="_blank" href="https://geo.itunes.apple.com/us/artist/bayza/882647839?mt=1&amp;app=music">Apple Music</a></li>
           </ul>
         </div>
