--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Music</title>
+    <title>Releases | Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
