--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -9,7 +9,7 @@
 {%- assign sorted = site.data.releases | sort: 'date' | reverse -%}
 <html lang="en">
   <head>
-    <title>{{ release.artists }} - {{ release.title }}</title>
+    <title>{{ release.artists }} - {{ release.title }} | Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
