--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -1,7 +1,7 @@
 {%- assign sorted = site.data.releases | sort: 'date' | reverse | where: "year", page.year | where: "type", page.type -%}
 <html lang="en">
   <head>  
-    <title>{{ page.year }} | {{ page.type }} | Bayza</title>
+    <title>{{ page.year }} |  {{ page.type }} | Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -42,11 +42,11 @@
         <h3 class="mt-3 text-uppercase text-white">{{ page.type }}</h3>
         <h4 class="font-weight-light">{{ page.year }}</h4>
         <div class="row my-4">{% for item in sorted %}
-          <div class="col-12 col-lg-3">
+          <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <a href="/releases/{{ item.year }}{{ page.link }}/{{ item.release }}">
-                  <img src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}" width="250" height="250">
+                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
                 </a>
                 <a href="/releases/{{ item.year }}{{ page.link }}/{{ item.release }}">
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
