--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -132,7 +132,7 @@
             </div>
           </div>{% if forloop.index0 == 7 %}{% break %}{% endif %}{% endfor %}
         </div>  
-        <a class="btn btn-outline-releases px-4 py-1" href="/releases">See all</a>
+        <a class="btn btn-outline-releases px-4 py-1" href="/releases">See all releases</a>
       </div>
     </section>
 
