--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -45,7 +45,7 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2020">
-                  <img src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2020" width="300" height="300">
+                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2020">
                 </a>
                 <a href="/releases/2020">
                   <h5 class="mb-0"><small><p class="mt-2">2020 Releases</p></small></h5>
@@ -57,7 +57,7 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2019">
-                  <img src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
+                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019">
                 </a>
                 <a href="/releases/2019">
                   <h5 class="mb-0"><small><p class="mt-2">2019 Releases</p></small></h5>
@@ -77,7 +77,7 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2020-bootlegs">
-                  <img src="https://bayzamusic.com/images/2020-bootlegsbayzacom.jpg" alt="Bayza 2020 Bootlegs" width="300" height="300">
+                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2020-bootlegsbayzacom.jpg" alt="Bayza 2020 Bootlegs">
                 </a>
                 <a href="/releases/2020-bootlegs">
                   <h5 class="mb-0"><small><p class="mt-2">2020 Bootlegs/Remixes</p></small></h5>
@@ -89,7 +89,7 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2019-bootlegs">
-                  <img src="https://bayzamusic.com/images/2019-bootlegsbayzacom.jpg" alt="Bayza 2019 Bootlegs" width="300" height="300">
+                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2019-bootlegsbayzacom.jpg" alt="Bayza 2019 Bootlegs">
                 </a>
                 <a href="/releases/2019-bootlegs">
                   <h5 class="mb-0"><small><p class="mt-2">2019 Bootlegs/Remixes</p></small></h5>
