navbar fixed top, margins fix because of it

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -71,7 +71,7 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1 fixed-top">
       <a class="navbar-brand" href="/"><i class="icon-bayza"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -93,7 +93,7 @@
         </ul>
       </div>  
     </nav>
-    <section id="dark" class="cabecera text-center text-dark py-5">
+    <section id="dark" class="cabecera text-center text-dark py-5 mt-5">
       <div class="container py-5 my-5">
         <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
         <h4 class="my-3 font-weight-light">Panamanian musician and producer</h4>
