--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -37,7 +37,7 @@
 
   </body>
   {% include navbar.html %}
-    <section id="releases" class="bg-darkest-est">
+    <section id="releases" class="bg-darkest-est mt-5">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-3 text-uppercase text-white">{{ page.type }}</h3>
         <h4 class="font-weight-light">{{ page.year }}</h4>
