--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -36,7 +36,7 @@
 
   </body>
     {% include navbar.html %}
-    <section id="releases" class="bg-darkest-est">
+    <section id="releases" class="bg-darkest-est mt-5">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-3 text-uppercase text-white">Official Releases</h3>
         <h4 class="font-weight-light">by year</h4>
