--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -65,6 +65,18 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-lg-4">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/2018">
+                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2018bayzacom.jpg" alt="Bayza 2018">
+                </a>
+                <a href="/releases/2018">
+                  <h5 class="mb-0"><small><p class="mt-2">2018 Releases</p></small></h5>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
