--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -36,9 +36,9 @@
 
   </body>
     {% include navbar.html %}
-    <section id="releases" class="bg-darkest-est mt-5">
+    <section id="releases" class="bg-darkest-est">
       <div class="container text-secondary text-center py-5">
-        <h3 class="mt-3 text-uppercase text-white">Official Releases</h3>
+        <h3 class="mt-5 text-uppercase text-white">Official Releases</h3>
         <h4 class="font-weight-light">by year</h4>
         <div class="row my-4">
           <div class="col-12 col-lg-4">
