--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -77,7 +77,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto text-right">
         <li class="nav-item">
           <a class="nav-link active" href="/">Home</a>
         </li>
