--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav ml-auto text-right">
+      <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link{% if page.path == 'index.md' %} active{% endif %}" href="/">Home</a>
       </li>
