theme color mobile

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,6 +4,7 @@
     <title>Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
+    <meta name="theme-color" content="#282828"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
     <meta name="keywords" content="Bayza, Big Room, Bounce, Panama, Music, EDM, Dance, Deep House, Oriental" />
