--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -4,6 +4,7 @@
     <title>{{ page.year }} |  {{ page.type }} | Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
+    <meta name="theme-color" content="#282828"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
     <meta name="keywords" content="Bayza, {{ page.year }}, bounce, music, EDM, dance, deep house, oriental, {{ page.type }}" />
