--- a/_layouts/fanlink_list.html
+++ b/_layouts/fanlink_list.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="robots" content="index,follow"/>
-    <meta name="keywords" content="bayza,fanlinks,music,deep,house,electronic"/>
+    <meta name="keywords" content="fanlinks,music,deep,house,electronic"/>
     <meta name="description" content="{{ page.description }}"/>
     <!-- Protocolo Open Graph -->
     <meta property="og:url" content="{{ site.url }}/{{ page.link }}"/>
