--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#282828"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="Bayza, {{ page.year }}, bounce, music, EDM, dance, deep house, oriental, {{ page.type }}" />
+    <meta name="keywords" content="{{ page.year }}, bounce, music, EDM, dance, deep house, oriental, {{ page.type }}" />
     <meta name="description" content="{{ page.year }} {{ page.type }}."/>
     
     <!-- Protocolo Open Graph -->
