--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#282828"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="Bayza, releases, bounce, music, EDM, dance, deep house, oriental" />
+    <meta name="keywords" content="releases, bounce, music, EDM, dance, deep house, oriental" />
     <meta name="description" content="All releases."/>
     
     <!-- Protocolo Open Graph -->
