--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -52,6 +52,13 @@
             "url" : "https://bayzamusic.com",
             "logo" : "http://bayzamusic.com/images/logomt.jpg",
             "image" : "http://bayzamusic.com/images/ahmed_bannerweb.jpg",
+            "member":[
+              {
+                "@type": "Person",
+                "name": "Ahmed Rangel",
+                "birthDate": "1998-06-15"
+              }
+            ],
             "description": "Bayza is a Panamanian musician and producer."
           },
           {
@@ -59,6 +66,13 @@
             "name" : "Bayza",
             "url" : "https://bayzamusic.com",
             "image" : "http://bayzamusic.com/images/logomt.jpg",
+            "member":[
+              {
+                "@type": "Person",
+                "name": "Ahmed Rangel",
+                "birthDate": "1998-06-15"
+              }
+            ],
             "description": "Bayza is a Panamanian musician and producer.",
             "sameAs" : [ 
               "https://youtube.com/c/bayza",
