--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -66,8 +66,8 @@
             "@id":"https://musicbrainz.org/artist/7b200a18-08d4-4d29-b0ce-ba6cd0a9b5e4",
             "name" : "Bayza",
             "alternateName": "Ahmed Rangel",
-            "url" : "{{ site.url }}",
-            "image" : "{{ site.url }}/images/logomt.jpg",
+            "url" : "http://bayzamusic.com",
+            "image" : "http://bayzamusic.com/images/logomt.jpg",
             "description": "Bayza is a Panamanian musician and producer.",
             "birthDate": "1998-06-15",
             "birthPlace":
