--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#282828"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="Bayza, Big Room, Bounce, Panama, Music, EDM, Dance, Deep House, Oriental" />
+    <meta name="keywords" content="bayza, dj, producer, panama, music, EDM, dance, musician, artist, ahmed" />
     <meta name="description" content="Bayza is a Panamanian musician and producer."/>
     
     <!-- Protocolo Open Graph -->
