--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#282828"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="{{ release.artists }}, {{ release.title }}, {{ release.genre }}, {{ release.year }}, electro, EDM, music" />
+    <meta name="keywords" content="{{ release.title }}, {{ release.genre }}, {{ release.year }}, electro, EDM, music" />
     <meta name="description" content="{{ release.artists }} - {{ release.title }}."/>
 
     <!-- Protocolo Open Graph -->
