--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -79,6 +79,7 @@
             </div>
           </div>
         </div>
+        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all">See all releases</a>
       </div>
     </section>
     <section id="releases" class="bg-darkest">
@@ -111,7 +112,9 @@
             </div>
           </div>
         </div>
-      </section>
+        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all-bootlegs">See all bootlegs</a>
+      </div>
+    </section>
 {% include footer.html %}
 {% include scripts.html %}
   </body>
